# telegram-ads-manager

./: .gitignore  .prettierrc  LICENSE  README.md  index.html  package-lock.json  package.json
backend/: .env  .env.example  Cargo.toml  channels.json  channels.json_bk
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/api/v1/: mod.rs
backend/src/api/v1/ads/: handlers.rs  mod.rs  models.rs
backend/src/api/v1/categories/: handlers.rs  mod.rs
backend/src/api/v1/channels/: handlers.rs  mod.rs  models.rs
backend/src/api/v1/geos/: handlers.rs  mod.rs
backend/src/config/: config.rs  mod.rs  models.rs
backend/src/database/: database.rs  mod.rs  models.rs
backend/src/services/: mod.rs  openai.rs  telegram.rs
backend/src/utils/: html_parser.rs  mod.rs  text.rs
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts
frontend/src/components/: AdMessageGenerator.tsx  App.tsx  Channels.tsx  ChannelsTable.tsx  CreateAdForm.tsx  FilterButtons.tsx  FloatingTextarea.tsx  LinksGenerator.tsx  LoadingSpinner.tsx  Modal.tsx  SelectChannels.tsx  SelectChannelsTextarea.tsx
frontend/src/hooks/: useIntersectionObserver.ts
frontend/src/types/: types.ts
frontend/src/utils/: storage.ts
src/components/: App.tsx
